--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,17 @@
+image: python:latest
+
+before_script:
+  - python3 -V 
+  - pip3 install virtualenv
+  - virtualenv venv
+  - source venv/bin/activate
+  - pip3 install requests
+
 job:
   script:
     - echo "Hello, world!"
+
+test_job:
+  stage: test
+  script: 
+    - python3 -m unitTests
