testing the fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,23 @@
 image: python:latest
 
 before_script:
-  - python3 -V 
-  - pip3 install virtualenv
-  - virtualenv venv
-  - source venv/bin/activate
-  - pip3 install requests
-  - pip3 install week3/
+  - export PATH="/root/.local/bin:$PATH"
 
-job:
+job1:
   script:
     - echo "Hello, world!"
+
+
+installing_dependencies:
+  script:
+    - apt-get update
+    - apt-get install -y python3-pip
+    - curl -sSL https://install.python-poetry.org/ | python3 - --git https://github.com/python-poetry/poetry.git@master
+    - cd week3
+    - poetry install
+
 
 test_job:
   stage: test
   script: 
-    - python3 -m /week3/unitTests
+   - python3 -m unitTests
