--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,19 @@ installing_dependencies:
     - cd week3
     - poetry install
 
+job_artifacts:
+  script:
+    - apt-get update
+    - apt-get install -y python3-pip
+    - curl -sSL https://install.python-poetry.org/ | python3 - --git https://github.com/python-poetry/poetry.git@master
+    - cd week3
+    - poetry install
+    - poetry run python3 main_cli.py
+  artifacts:
+    paths:
+      - week3/chart.txt
+    expire_in: 1 week
+
 
 test_job:
   stage: test
