--- a/week4/4-complete/backend/Dockerfile
+++ b/week4/4-complete/backend/Dockerfile
@@ -1,3 +1,16 @@
 FROM python:3.10-slim-buster
 
-# TODO: Add your code here.
+COPY simple-todo-backend /app
+WORKDIR /app
+
+EXPOSE 80
+
+RUN pip install --upgrade pip && \
+    pip install poetry && \
+    poetry config virtualenvs.create false && \
+    poetry install
+
+RUN cd /app
+RUN poetry install
+
+CMD poetry run python3 app.py
