--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ build_and_release:
       - week3/chart.txt
     expire_in: 1 week
   needs: 
-    - build
+    - [installing_dependencies]
 
 
 test_job:
@@ -49,3 +49,5 @@ test_job:
   script: 
     - cd week3
     - python3 -m unitTests
+  needs: 
+    - [installing_dependencies]
